# CV-coins-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  coins.cpp  coins_toolbox.cpp  coins_toolbox.hpp
